# sharpSAT

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml
cov/: bootstrap.sh
cov/report/: index.html
cov/report/Modules/: sharpSAT.html
cov/report/Modules/sharpSAT/: alt_component_analyzer.cpp.html  alt_component_analyzer.h.html  base_packed_component.cpp.html  base_packed_component.h.html  cacheable_component.h.html  component.h.html  component_archetype.h.html  component_cache-inl.h.html  component_cache.cpp.html  component_cache.h.html  component_management.cpp.html  component_management.h.html  containers.h.html  difference_packed_component.h.html  instance.cpp.html  instance.h.html  main.cpp.html  primitive_types.h.html  solver.cpp.html  solver.h.html  stack.h.html  statistics.cpp.html  statistics.h.html  stopwatch.cpp.html  stopwatch.h.html  structures.h.html  unions.h.html
include/sharpSAT/: alt_component_analyzer.h  component_analyzer.h  component_cache-inl.h  component_cache.h  component_management.h  containers.h  instance.h  new_component_analyzer.h  primitive_types.h  solver.h  solver_config.h  stack.h  statistics.h  stopwatch.h  structures.h  unions.h
include/sharpSAT/component_types/: base_packed_component.h  cacheable_component.h  component.h  component_archetype.h  difference_packed_component.h  simple_packed_component.h  simple_unpacked_component.h
include/sharpSAT/containers/: binary_heap.h
src/: alt_component_analyzer.cpp  component_analyzer.cpp  component_cache.cpp  component_management.cpp  instance.cpp  main.cpp  new_component_analyzer.cpp  solver.cpp  statistics.cpp  stopwatch.cpp  structures.cpp
src/component_types/: base_packed_component.cpp  component_archetype.cpp
test/benchmark/: easy.txt
test/benchmark/mks/: wiki_geometry.cnf
test/integration/: unsat-by-long-unit-propagation.cnf  unsat-trivial-redundant.cnf
